--- a/config_sample.env
+++ b/config_sample.env
@@ -1,23 +1,23 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1165440960:AAFQLMCPxtQ7CLi241Iu8Zno1fBBCGppbL4"
+GDRIVE_FOLDER_ID = "1urFtJpqXatViW23zrN5c4VPe0EAjz7kJ"
+OWNER_ID =667279640
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 7
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API =1077855
+TELEGRAM_HASH = "78dc981911ed7afdd9bcd150fdd1ca19"
 BASE_URL_OF_BOT = ""  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""  # Split by space
-SUDO_USERS = ""  # Split by space
+AUTHORIZED_CHATS = "-1001274575564"  # Split by space
+SUDO_USERS = "730545568"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://prod.noisy-pond-b5e6.jopahed626.workers.dev/0:"
 STATUS_LIMIT = ""  # Recommended limit is 4
 UPTOBOX_TOKEN = ""
 MEGA_API_KEY = ""
